--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@nuxtjs/bulma": "^1.2.1",
+    "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
     "nuxt": "^2.3.4",
-    "@nuxtjs/bulma": "^1.2.1",
-    "@nuxtjs/pwa": "^2.6.0"
+    "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
