--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@nuxtjs/bulma": "^1.2.1",
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
+    "firebase": "^5.8.0",
+    "moment": "^2.23.0",
     "nuxt": "^2.3.4",
     "nuxt-fontawesome": "^0.4.0"
   },
