--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "firebase": "^5.8.0",
     "moment": "^2.23.0",
     "nuxt": "^2.3.4",
-    "nuxt-fontawesome": "^0.4.0"
+    "nuxt-fontawesome": "^0.4.0",
+    "slugify": "^1.3.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
