--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "moment": "^2.23.0",
     "nuxt": "^2.3.4",
     "nuxt-fontawesome": "^0.4.0",
-    "slugify": "^1.3.4"
+    "slugify": "^1.3.4",
+    "vue-stripe-checkout": "^1.2.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
