--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-functions": "^2.1.0",
+    "stripe": "^6.22.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
