--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nuxt": "^2.3.4",
     "nuxt-fontawesome": "^0.4.0",
     "slugify": "^1.3.4",
-    "vue-stripe-checkout": "^1.2.6"
+    "vue-stripe-checkout": "^1.2.6",
+    "vue2-editor": "^2.6.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
