--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
-    "@nuxtjs/bulma": "^1.2.1",
     "@nuxtjs/pwa": "^2.6.0",
     "axios": "^0.18.0",
+    "bulma": "^0.7.4",
     "cross-env": "^5.2.0",
     "firebase": "^5.8.0",
     "firebase-admin": "^6.5.1",
