--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "moment": "^2.23.0",
     "nuxt": "^2.3.4",
     "nuxt-fontawesome": "^0.4.0",
+    "quill": "^1.3.6",
     "slugify": "^1.3.4",
+    "vue-quill-editor": "^3.0.6",
     "vue-stripe-checkout": "^1.2.6",
     "vue2-editor": "^2.6.6"
   },
