--- a/functions/package.json
+++ b/functions/package.json
@@ -10,9 +10,11 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cors": "^2.8.5",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
+    "mailgun-js": "^0.22.0",
     "stripe": "^6.22.0"
   },
   "devDependencies": {
