--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,8 @@
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
     "mailgun-js": "^0.22.0",
+    "sanitize-html": "^1.20.1",
+    "string-strip-html": "^4.0.12",
     "stripe": "^6.22.0"
   },
   "devDependencies": {
