--- a/functions/package.json
+++ b/functions/package.json
@@ -10,14 +10,14 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "cors": "^2.8.5",
-    "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0",
+    "firebase-admin": "^8.2.0",
+    "firebase-functions": "^3.1.0",
     "mailgun-js": "^0.22.0",
     "sanitize-html": "^1.20.1",
     "string-strip-html": "^4.0.12",
-    "stripe": "^6.22.0"
+    "stripe": "^7.4.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
