--- a/package.json
+++ b/package.json
@@ -14,48 +14,49 @@
     "test": "jest"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.12",
-    "@fortawesome/free-solid-svg-icons": "^5.6.3",
-    "@nuxtjs/axios": "^5.4.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/pwa": "^2.6.0",
-    "axios": "^0.18.0",
-    "bulma": "^0.7.4",
+    "axios": "^0.19.0",
+    "bulma": "^0.7.5",
+    "core-js": "^2.6.9",
     "cross-env": "^5.2.0",
-    "firebase": "^5.8.0",
-    "firebase-admin": "^6.5.1",
-    "firebase-functions": "^2.1.0",
-    "moment": "^2.23.0",
-    "nuxt": "^2.3.4",
+    "firebase": "^6.3.1",
+    "firebase-admin": "^8.2.0",
+    "firebase-functions": "^3.1.0",
+    "moment": "^2.24.0",
+    "nuxt": "^2.8.1",
     "nuxt-fontawesome": "^0.4.0",
     "quill": "^1.3.6",
     "slugify": "^1.3.4",
     "vue-quill-editor": "^3.0.6",
     "vue-stripe-checkout": "^1.2.6",
-    "vue2-editor": "^2.6.6"
+    "vue2-editor": "^2.9.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
-    "@vue/test-utils": "^1.0.0-beta.27",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^23.6.0",
-    "eslint": "^5.0.1",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-config-standard": ">=12.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": ">=2.14.0",
-    "eslint-plugin-jest": ">=21.24.1",
-    "eslint-plugin-node": ">=7.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.12.0",
+    "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-prettier": "2.6.2",
-    "eslint-plugin-promise": ">=4.0.1",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": ">=4.0.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^5.2.3",
     "jest": "^23.6.0",
-    "node-sass": "^4.11.0",
-    "nodemon": "^1.18.9",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
     "prettier": "1.14.3",
     "sass-loader": "^7.1.0",
-    "vue-jest": "^3.0.2"
+    "vue-jest": "^3.0.4"
   }
 }
