--- a/package.json
+++ b/package.json
@@ -14,30 +14,31 @@
     "test": "jest"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@nuxtjs/axios": "^5.5.4",
-    "@nuxtjs/dotenv": "^1.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^2.6.0",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "bulma": "^0.7.5",
-    "core-js": "^2.6.9",
-    "cross-env": "^5.2.0",
-    "firebase": "^6.3.1",
-    "firebase-admin": "^8.2.0",
-    "firebase-functions": "^3.1.0",
-    "moment": "^2.24.0",
-    "nuxt": "^2.8.1",
+    "core-js": "^2.6.11",
+    "cross-env": "^5.2.1",
+    "firebase": "^6.6.2",
+    "firebase-admin": "^8.13.0",
+    "firebase-functions": "^3.11.0",
+    "moment": "^2.29.0",
+    "node-fetch": "^2.6.1",
+    "nuxt": "^2.14.6",
     "nuxt-fontawesome": "^0.4.0",
-    "quill": "^1.3.6",
-    "slugify": "^1.3.4",
+    "quill": "^1.3.7",
+    "slugify": "^1.4.5",
     "vue-quill-editor": "^3.0.6",
     "vue-stripe-checkout": "^1.2.6",
-    "vue2-editor": "^2.9.1"
+    "vue2-editor": "^2.10.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
-    "@vue/test-utils": "^1.0.0-beta.29",
+    "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^23.6.0",
@@ -45,18 +46,20 @@
     "eslint-config-prettier": "^3.6.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.12.0",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^22.21.0",
+    "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": ">=4.0.0",
+    "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^5.2.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^4.5.0",
     "jest": "^23.6.0",
-    "node-sass": "^4.12.0",
-    "nodemon": "^1.19.1",
+    "node-sass": "^4.14.1",
+    "nodemon": "^1.19.4",
     "prettier": "1.14.3",
-    "sass-loader": "^7.1.0",
-    "vue-jest": "^3.0.4"
+    "sass-loader": "^7.3.1",
+    "vue-jest": "^3.0.7"
   }
 }
